[tool.poetry]
name = "fastapi-ocr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pytesseract = "^0.3.10"
opencv-python-headless = "^4.7.0.72"
python-multipart = "^0.0.6"
python-gyazo = "^2.3.0"
setuptools = "^67.6.1"
pip = "^23.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"